# playwright-async-pytest

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: _pdm-publish.yml  _pre-commit-autoupdate.yml  _pre-commit.yml  _python-semantic-release.yml  _test.yml  main.yml  post-main.yml
src/pytest_playwright_async/: __init__.py  pytest_playwright_async.py
tests/: conftest.py  test_for_readme.py  test_from_playwright_docs.py  test_playwright.py  test_with_sync.py
tests/async/: conftest.py  test_playwright.py
tests/sync/: test_for_readme.py  test_from_playwright_docs.py  test_playwright.py
